# scaffold-flaskapi-docker-gcp

./: .gitignore  Dockerfile  README.md  naive.Dockerfile  optimal.Dockerfile  pyproject.toml  requirements.txt  sm.Dockerfile
app/: flask-api.py
