[tool.poetry]
name = "mini-python-gcp"
version = "0.1.0"
description = "Fast Docker builds with Poetry in Python"
authors = ["Sebastian Cáceres Gelvez <sebastian.caceres.g@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
